* Renderer run in web worker.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -338,5 +338,5 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
+<app-level-control></app-level-control>
 <router-outlet />
