* Knurling and style

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -339,4 +339,57 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
+<app-level-control></app-level-control>
 <router-outlet />
