--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,2 @@
-<app-level-control></app-level-control>
-<app-level-control></app-level-control>
-<app-level-control></app-level-control>
-<app-level-control></app-level-control>
+<app-level-control (setLevel)="setLevel($event)"></app-level-control><app-level-control (setLevel)="setLevel($event)"></app-level-control>
 <router-outlet />
