--- a/src/app/level-control/level-control.html
+++ b/src/app/level-control/level-control.html
@@ -1,1 +1,1 @@
-<canvas #theCanvas width="200" height="200"></canvas>
+<canvas #theCanvas width="200" height="200" (focus)="focus()" (blur)="blur()"></canvas>
