* Improved scalability of dials. * Listen for note key events on window.

--- a/src/app/level-control/level-control.html
+++ b/src/app/level-control/level-control.html
@@ -1,1 +1,1 @@
-<canvas #theCanvas width="200" height="200" (focus)="focus()" (blur)="blur()"></canvas>
+<canvas #theCanvas [width]="radius*2" [height]="radius*2+extraForCursor" (focus)="focus()" (blur)="blur()"></canvas>
