--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,10 @@
 <button (click)="start()">Start</button>
 <button (mousedown)="play()" (mouseup)="end()" (mouseout)="end()">Ping</button>
-<app-level-control (setLevel)="setFreq($event)"></app-level-control>
-<app-level-control (setLevel)="setLevel($event)"></app-level-control>
-<app-level-control (setLevel)="setFilter($event)"></app-level-control>
+<app-level-control [radius]="50"  (setLevel)="setFreq($event)"></app-level-control>
+<app-level-control [radius]="50"  (setLevel)="setLevel($event)"></app-level-control>
+<app-level-control [radius]="40" (setLevel)="setFilter($event)"></app-level-control>
 <br>
 <br>
 <br>
-<div #div (keydown)="keydown($event)" (keyup)="keyup($event)" style="width: 80px; height: 80px; background-color: black"></div>
+<!--<div #div (keydown)="keydown($event)" (keyup)="keyup($event)" style="width: 80px; height: 80px; background-color: black"></div>-->
 <router-outlet />
