* Trying GUI layouts.

--- a/src/app/level-control/level-control.component.html
+++ b/src/app/level-control/level-control.component.html
@@ -1,1 +1,3 @@
-<canvas #theCanvas [width]="radius*2" [height]="radius*2+extraForCursor" (focus)="focus()" (blur)="blur()"></canvas>
+<div>
+  <canvas #theCanvas [width]="radius*2" [height]="radius*2+extraForCursor" (focus)="focus()" (blur)="blur()"></canvas>
+</div>
