--- a/src/app/oscillator/oscillator.component.html
+++ b/src/app/oscillator/oscillator.component.html
@@ -9,24 +9,24 @@
     </div>
     <div class="module align-mod">
       <h2>Modulation</h2>
-      <app-level-control #modulation label="LFO Frequency" [plusMinus]="true" [divisions]="tuningDivisions" [calAngle]="300" [radius]="50" (setLevel)="setFrequency($event)"></app-level-control>
+      <app-level-control #modulation label="LFO Frequency" [style]="dialStyle.green" [plusMinus]="true" [divisions]="tuningDivisions" [calAngle]="300" [radius]="50" (setLevel)="setFrequency($event)"></app-level-control>
     </div>
   </div>
   <div class="module">
     <h2>Envelope</h2>
-    <app-level-control #attack label="Attack" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setAttack($event)"></app-level-control>
-    <app-level-control #decay label="Decay" [radius]="50" [divisions]="10" (setLevel)="setDecayTime($event)"></app-level-control>
-    <app-level-control #sustain label="Sustain" [radius]="50" [divisions]="10" (setLevel)="setSustainLevel($event)"></app-level-control>
-    <app-level-control #release label="Release" [radius]="50" [divisions]="10" (setLevel)="setReleaseTime($event)"></app-level-control>
+    <app-level-control #attack label="Attack" [style]="dialStyle.red" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setAttack($event)"></app-level-control>
+    <app-level-control #decay label="Decay" [style]="dialStyle.red" [radius]="50" [divisions]="10" (setLevel)="setDecayTime($event)"></app-level-control>
+    <app-level-control #sustain label="Sustain" [style]="dialStyle.red" [radius]="50" [divisions]="10" (setLevel)="setSustainLevel($event)"></app-level-control>
+    <app-level-control #release label="Release" [style]="dialStyle.red" [radius]="50" [divisions]="10" (setLevel)="setReleaseTime($event)"></app-level-control>
   </div>
   <div class="module">
     <h2>Freq Envelope</h2>
-    <app-level-control #freqAttack label="Attack" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setAttack($event)"></app-level-control>
-    <app-level-control #freqAttackLevel label="Attack Level" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setAttack($event)"></app-level-control>
-    <app-level-control #freqDecay label="Decay" [radius]="50" [divisions]="10" (setLevel)="setDecayTime($event)"></app-level-control>
-    <app-level-control #freqSustain label="Sustain" [radius]="50" [divisions]="10" (setLevel)="setSustainLevel($event)"></app-level-control>
-    <app-level-control #freqRelease label="Release" [radius]="50" [divisions]="10" (setLevel)="setReleaseTime($event)"></app-level-control>
-    <app-level-control #freqReleaseLevel label="Release Level" [radius]="50" [divisions]="10" (setLevel)="setReleaseTime($event)"></app-level-control>
+    <app-level-control #freqAttack label="Attack" [style]="dialStyle.yellow" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setAttack($event)"></app-level-control>
+    <app-level-control #freqAttackLevel label="Attack Level" [style]="dialStyle.yellow"  [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setAttack($event)"></app-level-control>
+    <app-level-control #freqDecay label="Decay" [radius]="50" [style]="dialStyle.yellow"  [divisions]="10" (setLevel)="setDecayTime($event)"></app-level-control>
+    <app-level-control #freqSustain label="Sustain" [radius]="50" [style]="dialStyle.yellow"  [divisions]="10" (setLevel)="setSustainLevel($event)"></app-level-control>
+    <app-level-control #freqRelease label="Release" [radius]="50" [style]="dialStyle.yellow"  [divisions]="10" (setLevel)="setReleaseTime($event)"></app-level-control>
+    <app-level-control #freqReleaseLevel label="Release Level" [style]="dialStyle.yellow"  [radius]="50" [divisions]="10" (setLevel)="setReleaseTime($event)"></app-level-control>
   </div>
 </div>
 
