* Format tidy up. * On/off switched for gain and frequency envelope change the state, but still need to be set to the correct initial values.

--- a/src/app/oscillator/oscillator.component.scss
+++ b/src/app/oscillator/oscillator.component.scss
@@ -15,12 +15,18 @@
   margin: 3px;
 }
 .column {
+  //border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: fit-content;
   height: fit-content;
 }
 
 .align-mod {
-  margin-top: 108px;
+  margin-top: 25px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .group-container {
