--- a/src/app/oscillator/oscillator.component.html
+++ b/src/app/oscillator/oscillator.component.html
@@ -6,10 +6,19 @@
       <h2>Oscillators</h2>
       <app-level-control #frequency label="Tuning" [plusMinus]="true" [divisions]="tuningDivisions" [calAngle]="300" [radius]="50" (setLevel)="setFrequency($event)"></app-level-control>
       <app-level-control #gain label="Gain" [radius]="50" [divisions]="10" (setLevel)="setGain($event)"></app-level-control>
+      <h2>Output</h2>
+      <div style="height: 3px;"></div>
+      <form #oscOutputToForm>
+        <label><input type="radio" name="output" value="speaker" checked><span>Speaker</span></label>
+        <label><input type="radio" name="output" value="filter"><span>Filter</span></label>
+        <label><input type="radio" name="output" value="ringmod"><span>Ring Mod</span></label>
+        <label><input type="radio" name="output" value="off"><span>Off</span></label>
+      </form>
     </div>
     <div class="module align-mod">
       <h2>Modulation</h2>
-      <app-level-control #modulation label="LFO Frequency" [style]="dialStyle.green" [plusMinus]="true" [divisions]="tuningDivisions" [calAngle]="300" [radius]="50" (setLevel)="setFrequency($event)"></app-level-control>
+      <app-level-control #modulation label="LFO Frequency" [style]="dialStyle.green" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setFrequency($event)"></app-level-control>
+      <app-level-control #modulation label="Mod Depth" [style]="dialStyle.green" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setFrequency($event)"></app-level-control>
       <form>
         <label><input type="radio" name="lfo" value="on"><span>On</span></label>
         <label><input type="radio" name="lfo" value="off" checked><span>Off</span></label>
@@ -42,13 +51,4 @@
     </form>
   </div>
 </div>
-  <h2>Output</h2>
-  <div style="height: 3px;"></div>
-  <form #oscOutputToForm>
-    <label><input type="radio" name="output" value="speaker" checked><span>Speaker</span></label>
-    <label><input type="radio" name="output" value="filter"><span>Filter</span></label>
-    <label><input type="radio" name="output" value="ringmod"><span>Ring Mod</span></label>
-    <label><input type="radio" name="output" value="off"><span>Off</span></label>
-  </form>
-
 </div>
