* Add waveform selector buttons.

--- a/src/app/oscillator/oscillator.component.html
+++ b/src/app/oscillator/oscillator.component.html
@@ -6,6 +6,14 @@
       <h2>Oscillators</h2>
       <app-level-control #frequency label="Tuning" [plusMinus]="true" [divisions]="tuningDivisions" [calAngle]="300" [radius]="50" (setLevel)="setFrequency($event)"></app-level-control>
       <app-level-control #gain label="Gain" [radius]="50" [divisions]="10" (setLevel)="setGain($event)"></app-level-control>
+      <h2>Waveform</h2>
+      <div style="height: 3px;"></div>
+      <form #oscOutputToForm>
+        <label><input type="radio" name="output" value="sine" checked><span>Sine</span></label>
+        <label><input type="radio" name="output" value="square"><span>Square</span></label>
+        <label><input type="radio" name="output" value="sawtooth"><span>Saw</span></label>
+        <label><input type="radio" name="output" value="triangle"><span>Tri</span></label>
+      </form>
       <h2>Output</h2>
       <div style="height: 3px;"></div>
       <form #oscOutputToForm>
@@ -20,8 +28,9 @@
       <app-level-control #modulation label="LFO Frequency" [style]="dialStyle.green" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setFrequency($event)"></app-level-control>
       <app-level-control #modulation label="Mod Depth" [style]="dialStyle.green" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setFrequency($event)"></app-level-control>
       <form>
-        <label><input type="radio" name="lfo" value="on"><span>On</span></label>
-        <label><input type="radio" name="lfo" value="off" checked><span>Off</span></label>
+        <label><input type="radio" name="lfo" value="amplitude"><span>Amp</span></label>
+        <label><input type="radio" name="lfo" value="frequency"><span>Freq</span></label>
+        <label><input type="radio" name="lfo" value="off" checked><span>&nbsp;Off&nbsp;</span></label>
       </form>
     </div>
   </div>
