--- a/src/app/oscillator/oscillator.component.html
+++ b/src/app/oscillator/oscillator.component.html
@@ -25,9 +25,9 @@
     </div>
     <div class="module align-mod">
       <h2>Modulation</h2>
-      <app-level-control #modulation label="LFO Frequency" [style]="dialStyle.green" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setFrequency($event)"></app-level-control>
-      <app-level-control #modulation label="Mod Depth" [style]="dialStyle.green" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setFrequency($event)"></app-level-control>
-      <form>
+      <app-level-control #modFreq label="LFO Frequency" [style]="dialStyle.green" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setModFrequency($event)"></app-level-control>
+      <app-level-control #modDepth label="Mod Depth" [style]="dialStyle.green" [divisions]="10" [calAngle]="300" [radius]="50" (setLevel)="setModLevel($event)"></app-level-control>
+      <form #modSettingsForm>
         <label><input type="radio" name="lfo" value="amplitude"><span>Amp</span></label>
         <label><input type="radio" name="lfo" value="frequency"><span>Freq</span></label>
         <label><input type="radio" name="lfo" value="off" checked><span>&nbsp;Off&nbsp;</span></label>
