--- a/src/app/oscillator/oscillator.component.scss
+++ b/src/app/oscillator/oscillator.component.scss
@@ -19,10 +19,14 @@
   height: fit-content;
 }
 
+
 .align-mod {
   margin-top: 99px;
   margin-right: auto;
   margin-left: auto;
+}
+.osc-width {
+  min-width: 220px;
 }
 
 .group-container {
