* Added filters. * Added Synth component.

--- a/src/app/filter/filter-component.scss
+++ b/src/app/filter/filter-component.scss
@@ -25,8 +25,8 @@
   margin-right: auto;
   margin-left: auto;
 }
-.osc-width {
-  min-width: 240px;
+.filter-width {
+  min-width: 332px;
 }
 
 .group-container {
@@ -71,7 +71,7 @@
 
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   //cursor: pointer;
- // transition: all 0.2s ease-in-out;
+  // transition: all 0.2s ease-in-out;
 }
 
 * {
