--- a/src/app/oscillator/oscillator.component.html
+++ b/src/app/oscillator/oscillator.component.html
@@ -35,6 +35,7 @@
         <label><input type="radio" name="waveform" value="sawtooth"><span>Sawtooth</span></label>
         <label><input type="radio" name="waveform" value="triangle"><span>Triangle</span></label>
       </form>
+      <h2>Modulation</h2>
       <form #modSettingsForm>
         <label><input type="radio" name="lfo" value="amplitude"><span>Amplitude</span></label>
         <label><input type="radio" name="lfo" value="frequency"><span>Frequency</span></label>
