--- a/src/app/synth/synth-component.html
+++ b/src/app/synth/synth-component.html
@@ -1,5 +1,6 @@
 <div style="display: flex; flex-direction: row">
   <app-oscillators [filters]="filters" [numberOfOscillators]="50" (output)="setOscOutputTarget($event)"></app-oscillators>
   <app-filters #filters [numberOfFilters]="50" (output)="setFilterOutputTarget($event)"></app-filters>
+  <app-noise #noise [filters]="filters" [numberOfChannels]="50" (output)="setNoiseOutputTarget($event)"></app-noise>
 </div>
 
