* Noise generator integration.

--- a/src/app/noise/noise-component.html
+++ b/src/app/noise/noise-component.html
@@ -2,7 +2,7 @@
   <h1>Noise Generator</h1>
   <div class="group">
     <div class="column">
-      <div class="module">
+      <div class="module noise-width">
         <h2>Noise</h2>
         <app-level-control #gainControl label="Gain" [radius]="50" [divisions]="10"
                            (setLevel)="setGain($event)"></app-level-control>
@@ -21,9 +21,12 @@
           <label><input type="radio" name="output" value="off" checked><span>Off</span></label>
         </form>
       </div>
+    </div>
+    <div class="column">
       <div class="module">
         <h2>Envelope</h2>
-        <app-level-control #attack label="Attack" [style]="dialStyle.red" [divisions]="10" [calAngle]="300" [radius]="50"
+        <app-level-control #attack label="Attack" [style]="dialStyle.red" [divisions]="10" [calAngle]="300"
+                           [radius]="50"
                            (setLevel)="setAttack($event)"></app-level-control>
         <app-level-control #decay label="Decay" [style]="dialStyle.red" [radius]="50" [divisions]="10"
                            (setLevel)="setDecayTime($event)"></app-level-control>
@@ -32,8 +35,8 @@
         <app-level-control #release label="Release" [style]="dialStyle.red" [radius]="50" [divisions]="10"
                            (setLevel)="setReleaseTime($event)"></app-level-control>
         <form #amplitudeEnvelopeOnOffForm>
-          <label><input type="radio" name="envelope" value="on" checked><span>On</span></label>
-          <label><input type="radio" name="envelope" value="off"><span>Off</span></label>
+          <label><input type="radio" name="envelope" value="on"><span>On</span></label>
+          <label><input type="radio" name="envelope" value="off" checked><span>Off</span></label>
         </form>
 
       </div>
