--- a/src/app/noise/noise-component.scss
+++ b/src/app/noise/noise-component.scss
@@ -19,13 +19,7 @@
   height: fit-content;
 }
 
-
-.align-mod {
-  margin-top: 99px;
-  margin-right: auto;
-  margin-left: auto;
-}
-.osc-width {
+.noise-width {
   min-width: 240px;
 }
 
