--- a/src/app/oscillator/oscillator.component.html
+++ b/src/app/oscillator/oscillator.component.html
@@ -1,5 +1,5 @@
 <div class="group-container metallic-button">
-  <h1>Oscillators</h1>
+  <h1>{{name ? name : 'Oscillators'}}</h1>
   <div class="group">
     <div class="column">
       <div class="module osc-width">
